RESOLVED FIXED139483
REGRESSION(r177048) 11 failures on layout tests fast/selectors
https://bugs.webkit.org/show_bug.cgi?id=139483
Summary REGRESSION(r177048) 11 failures on layout tests fast/selectors
Carlos Alberto Lopez Perez
Reported 2014-12-10 07:50:59 PST
Revision r177048 <http://trac.webkit.org/r177048> has caused 11 failures on the tests fast/selectors. Regressions: Unexpected text-only failures (11) fast/selectors/attribute-direct-adjacent-style-update.html [ Failure ] fast/selectors/attribute-sibling-style-update.html [ Failure ] fast/selectors/class-direct-adjacent-style-update.html [ Failure ] fast/selectors/class-sibling-style-update.html [ Failure ] fast/selectors/empty-adjacent-style-update.html [ Failure ] fast/selectors/first-of-type-direct-adjacent-style-update.html [ Failure ] fast/selectors/first-of-type-sibling-style-update.html [ Failure ] fast/selectors/id-direct-adjacent-style-update.html [ Failure ] fast/selectors/id-sibling-style-update.html [ Failure ] fast/selectors/not-empty-adjacent-style-update.html [ Failure ] fast/selectors/placeholder-shown-sibling-style-update.html [ Failure ] The three is red because of this, and the commit queue is having trouble processing new patches. https://build.webkit.org/builders/Apple%20Mavericks%20Release%20WK2%20%28Tests%29 https://build.webkit.org/builders/Apple%20MountainLion%20Debug%20WK2%20%28Tests%29
Attachments
Andreas Kling
Comment 1 2014-12-10 08:50:32 PST
Oops! Fixing this...
Andreas Kling
Comment 2 2014-12-10 09:42:13 PST
Note You need to log in before you can comment on or make changes to this bug.