REGRESSION(r177048) 11 failures on layout tests fast/selectors. <https://webkit.org/b/139483>

Unreviewed fix for bots.

When rolling out the broken change, I accidentally also rolled out
a bug fix that Benjamin had made to sibling invalidation.
Restore his implementation of nodeOrItsAncestorNeedsStyleRecalc().

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::nodeOrItsAncestorNeedsStyleRecalc):
(WebCore::updateStyleIfNeededForNode):
(WebCore::ComputedStyleExtractor::propertyValue):

Canonical link: https://commits.webkit.org/157334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177074 268f45cc-cd09-0410-ab3c-d52691b4dbfc